-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b64
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8082638 | emb-9 | Roland Westrelin | P2 | Resolved | Fixed | team |
Here is an excerpt of the log file:
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/jprt/T/P1/095411.rwestrel/s/hotspot/src/share/vm/opto/library_call.cpp:4807), pid=13735, tid=139661848876800
# assert(allocx == alloc) failed: where has the allocation gone?
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20150323095411.rwestrel.8069263-b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20150323095411.rwestrel.8069263-b00 compiled mode linux-amd64 compressed oops)
# Core dump written. Default location: /export/local/aurora/sandbox/results/weblogic/core
The failing assert was added byJDK-8073866 so this problem could be related to that issue.
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/jprt/T/P1/095411.rwestrel/s/hotspot/src/share/vm/opto/library_call.cpp:4807), pid=13735, tid=139661848876800
# assert(allocx == alloc) failed: where has the allocation gone?
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20150323095411.rwestrel.8069263-b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20150323095411.rwestrel.8069263-b00 compiled mode linux-amd64 compressed oops)
# Core dump written. Default location: /export/local/aurora/sandbox/results/weblogic/core
The failing assert was added by
- backported by
-
JDK-8082638 assert assert(allocx == alloc) fails in library_call.cpp
-
- Resolved
-
- relates to
-
JDK-8073866 Fix for 8064703 is not sufficient
-
- Resolved
-