8075921: assert assert(allocx == alloc) fails in library_call.cpp

Control becomes top after arraycopy guards and confuses tighly coupled allocation logic

Reviewed-by: kvn, vlivanov